@@ -9,6 +9,7 @@
   * [Restart-RemoteService](http://get-carbon.org/help/Restart-RemoteService.html)
   * [Install-Share](http://get-carbon.org/help/Install-Share.html)
   * [Add-GroupMembers](http://get-carbon.org/help/Add-GroupMembers.html)
+  * [Get-WmiLocalUserAccount](http://get-carbon.org/help/Get-WmiLocalUserAccount.html)
   
 # 0.2.5 (29 June 2012)
 
